changes required to build using JDK 11